docs: use 'Math.clamp(v, 0, max)' instead of 'Math.min(Math.max(v, 0), max)'